# pico

./: .gitignore
gn/: .gn  BUILD.gn  README.md  banner.txt  bootstrap.sh  flash.sh
gn/build_overrides/: pi_pico.gni  pigweed.gni
gn/src/: BUILD.gn  blinky.cc  hello_world.cc  my_log_backend.c
gn/targets/host/: BUILD.gn  target_toolchains.gni
gn/targets/rp2040/: BUILD.gn  boot.cc
gn/targets/rp2040/config/: FreeRTOSConfig.h
mpy/: README.md
mpy/lib/yahboom/: README.md  color.py  dht11.py  ir.py  ssd1306.py  ws2812b.py
mpy/src/yahboom/: README.md  button.py  color.py  fan.py  infrared.py  marquee.py  oled.py  requirements.txt  rocker.py  stepper.py  vibrator.py
