import("//build_overrides/pi_pico.gni")
import("//build_overrides/pigweed.gni")
import("$dir_pw_build/python.gni")
import("$dir_pw_build/python_dist.gni")

##############
# Applications
##############

group("default") {
  deps = [
    ":apps",
    ":python.lint",   # Can maybe delete but won't mess with it for now...
    ":python.tests",  # Ditto...
  ]
}

group("apps") {
  print("dir_pw_third_party/freertos:arm_cm0=$dir_pw_third_party/freertos:arm_cm0")
  deps = [
    # "//src:hello_world(//targets/host:host)"
    "//src:hello_world(//targets/rp2040:rp2040.size_optimized)"
  ]
}

################
# Python tooling
################

pw_python_group("python") {
  python_deps = [
    "$dir_pw_env_setup:python"
  ]
}
