import("//build_overrides/pi_pico.gni")
import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")

group("all") {
  deps = [
    ":blinky"
  ]
}

pw_executable("blinky") {
  sources = [
    "blinky.cc"
  ]
  deps = [
    "$PICO_ROOT/src/common/pico_base",
    "$PICO_ROOT/src/common/pico_stdlib",
    "$dir_pw_digital_io_rp2040",
    "$dir_pw_log",
    "$dir_pw_system:target_hooks",
    "$dir_pw_thread:thread",
    "$dir_pw_thread_freertos:thread"
  ]
  remove_configs = [ "$dir_pw_build:strict_warnings" ]
  if (pw_build_EXECUTABLE_TARGET_TYPE == "pico_executable") {
    ldflags = [ "-Wl,--print-memory-usage" ]
  }
}
